<resources>
    <string name="app_name">QuizApp</string>
    <string name="appTitleText">SIT305 Quiz App</string>
    <string name="enterNameText">Enter your name:</string>
    <string name="startQuizText">START</string>
    <string name="welcomeText">Welcome</string>
    <string name="usernameHint">Name</string>
    <string name="submitText">SUBMIT</string>
    <string name="scoreText">YOUR SCORE:</string>
    <string name="takeNewQuizText">Take New Quiz</string>
    <string name="finishText">Finish</string>
    <array name="answers">
        <item>@array/answer1</item>
        <item>@array/answer2</item>
        <item>@array/answer3</item>
        <item>@array/answer4</item>
        <item>@array/answer5</item>
    </array>
    <string-array name="questionTitles">
        <item>Passing information between activities</item>
        <item>Starting an activity</item>
        <item>Lifecycle of an activity</item>
        <item>Constraint widget</item>
        <item>First stage of an activity lifecycle</item>
    </string-array>
    <string-array name="questionDescriptions">
        <item>In Android app development, we can pass information such as a string from one activity to another activity by utilising a class called?</item>
        <item>When this method is called, it will start an activity and the method expects something in return (e.g. name, score, etc..). What is the name of this method?</item>
        <item>The entire lifecycle of an activity is defined by several methods. What is the name of the last method?</item>
        <item>Which of these is not a valid constraint type?</item>
        <item>This method is called when the activity is first created. Ideally, when this method is called, it should do all static set up such as creating views. What is the name of this method?</item>
    </string-array>
    <string-array name="answer1">
        <item>TextView</item>
        <item>Intent</item>
        <item>SendText</item>
    </string-array>
    <string-array name="answer2">
        <item>getResultFromActivity</item>
        <item>startActivity</item>
        <item>startActivityForResult</item>
    </string-array>
    <string-array name="answer3">
        <item>onDestroy</item>
        <item>onStop</item>
        <item>onFinish</item>
    </string-array>
    <string-array name="answer4">
        <item>Auto</item>
        <item>Wrap Content</item>
        <item>Fixed</item>
    </string-array>
    <string-array name="answer5">
        <item>onStart</item>
        <item>onRestart</item>
        <item>onCreate</item>
    </string-array>
</resources>