<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".EndActivity">

    <TextView
        android:id="@+id/congratsTextView"
        android:layout_width="368dp"
        android:layout_height="55dp"
        android:layout_marginTop="203dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yourScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:text="@string/scoreText"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratsTextView" />

    <TextView
        android:id="@+id/userScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourScoreTextView" />

    <Button
        android:id="@+id/retryButton"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="47dp"
        android:backgroundTint="#8A8A8A"
        android:onClick="retryQuiz"
        android:text="@string/takeNewQuizText"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userScoreTextView"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#8A8A8A"
        android:onClick="closeApp"
        android:text="@string/finishText"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retryButton"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />



</LinearLayout>